--- a/assets/sass/layouts/_footer.scss
+++ b/assets/sass/layouts/_footer.scss
@@ -1,3 +1,48 @@
-.bg-footer{
-    background-color: $color-gray;
+main {
+	.bg-footer{
+		background-color: $color-gray;
+		padding: 30px 490px 60px 490px;
+	}
+}
+.contenedor-footer{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    p {
+		text-align: center;
+		color: $color-white;
+    }
+    button{
+		text-align: center;
+        width: 250px;
+        top:50%;
+    }
+}
+
+@media screen and(max-width: 1366px) {
+	main {
+		.bg-footer {
+			padding: 30px 100px 60px 100px;
+        }
+        .contenedor-footer{
+            padding: 30px 0px 30px 0px;
+        }
+	}
+}
+@media screen and (max-width:900px) {
+	main {
+		.bg-footer {
+			padding: 15px 20px 0px 20px;
+			margin: auto;
+		}
+	}
+	.contenedor-footer {
+		p {
+			margin: 10px 10px;
+        }
+
+        button{
+        }
+    }
+    
 }
