--- a/assets/sass/components/_accordiation.scss
+++ b/assets/sass/components/_accordiation.scss
@@ -81,3 +81,49 @@ li {
 .card-header {
   border-bottom: 0px solid rgba(0, 0, 0, 0.125);
 }
+
+
+@media screen and(max-width: 1366px) {
+  li {
+    color: $color-gray-light;
+    font-size: 0.9em;
+    &:before {
+      content: "";
+      display: inline-block;
+      width: 7px;
+      height: 7px;
+      border-radius: 7.5px;
+      background-color: #802E87;
+      left: 40px;
+      margin-top: 5px;
+      position: absolute;
+    }
+  }
+}
+@media screen and (max-width:900px) {
+  li {
+    color: $color-gray-light;
+    font-size: 0.9em;
+    &:before {
+      content: "";
+      display: inline-block;
+      width: 7px;
+      height: 7px;
+      border-radius: 7.5px;
+      background-color: #802E87;
+      left: 10px;
+      margin-top: 5px;
+      position: absolute;
+    }
+  }
+
+  #accordion p{
+    font-size: 0.8em;
+    text-align: left;
+    margin-top:15px;
+  }
+}
+
+@media screen and (min-width:768px) {
+
+}
